--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "author": "Antonio Alejandro Serrano Ramirez",
   "license": "",
   "dependencies": {
+    "adm-zip": "^0.4.14",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
-    "extract-zip": "^2.0.0",
-    "jimp": "^0.10.3",
-    "jsqr": "^1.2.0",
-    "jszip": "^3.2.2",
+    "image-data-uri": "^2.0.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "qrcode": "^1.4.4",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
