--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
+    "express-fileupload": ">=1.1.6",
     "image-data-uri": "^2.0.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
