--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   explorer:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: DockerFile
     container_name: explorer-server
     environment:
       DBHOST: "172.0.0.2"
@@ -11,8 +11,10 @@ services:
       DBPASSWD: "explorer"
       DBdb: "Explorer"
       PORT: 4500
+    volumes: 
+      - /opt/explorer/storage/qr:/opt/server/storage/qr
     depends_on:
-      - mysql
+      - db
     expose:
       - 4500
     ports:
@@ -21,7 +23,9 @@ services:
         explorer:
             ipv4_address: 172.0.0.3
   db:
-    image: mysql:8
+    build:
+      context: ../Explorer-DBScripts
+      dockerfile: DockerFile
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -30,7 +34,7 @@ services:
       MYSQL_USER: explorer
       MYSQL_PASSWORD: explorer
     volumes: 
-        - /explorer/data:/var/lib/mysql
+        - /opt/explorer/data/mysql:/var/lib/mysql
     networks: 
         explorer:
             ipv4_address: 172.0.0.2
